--- a/src/components/button/button.rn.scss
+++ b/src/components/button/button.rn.scss
@@ -4,39 +4,30 @@
     border-radius:6px;
     background-color: #ffffff;
     border: 1px solid #eee;
-    height: auto;
-    display: inline-block;
-    box-sizing: border-box;
-    line-height: 1.4;
-    border: none;
-    user-select: none;
-    cursor: pointer;
-    transition: opacity .15s ease;
-    overflow: hidden;
 }
 
 .primary-button {
     background-color: #1677ff;
+    border: 1px solid #1677ff;
 }
 
 .success-button {
     background-color: #00b578;
+    border: 1px solid #00b578;
 }
 
 .danger-button {
     background-color: #ff3141;
+    border: 1px solid #ff3141;
 }
 
 .warning-button {
     background-color: #ff8f1f;
+    border: 1px solid #ff8f1f;
 }
 
 .white {
     color: #fff;
-}
-
-.block {
-    width: 100%;
 }
 
 .mini-text {
@@ -60,18 +51,17 @@
 }
 
 .mini-button {
-    padding: 6px 14px;
-    line-height: 1;
+    padding: 8px 28px;
 }
 
 .small-button {
-    padding: 3px 22px;
+    padding: 8px 28px;
 }
 
 .middle-button {
-    padding: 10px 33px;
+    padding: 8px 28px;
 }
 
 .large-button {
-    padding: 22px 44px;
+    padding: 60px 40px;
 }
