--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -11,8 +11,15 @@
   /*  #endif  */
 
   &--primary {
-    background-color: #fa2c19;
+    background: #fa2c19;
     border: 1px solid transparent;
     color:#fff;
+  }
+
+  &--default {
+    background: #ffffff;
+    border: 1px solid transparent;
+    border-color: rgba(204, 204, 204, 1);
+    color:rgba(102, 102, 102, 1);
   }
 }
